# ROS_ejercicios

./: README.md
contador_pkg/: package.xml  setup.cfg  setup.py
contador_pkg/contador_pkg/: nodo_publicador.py  nodo_suscriptor.py
contador_pkg/launch/: contador_launch.py
texto_action_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
texto_action_pkg/action/: ProcesarTexto.action
texto_action_pkg/launch/: texto_launch.py
texto_action_pkg/texto_action_pkg/: texto_client.py  texto_server.py
