<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>texto_action_pkg</name>
  <version>0.0.0</version>
  <description>Paquete de ejemplo con acción personalizada</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>MIT</license>

  <!-- Dependencias para usar ROS 2 en Python -->
  <depend>rclpy</depend>
  <depend>action_msgs</depend>

  <!-- Dependencias para generar código de acciones -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencias para pruebas -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

